--- a/index.html
+++ b/index.html
@@ -72,37 +72,37 @@
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p>
+                    <p class="about-description">
                         I'm a passionate professional with expertise in creating digital solutions that make a difference. 
                         With years of experience in development and design, I help businesses achieve their goals through 
                         innovative technology and creative thinking.
                     </p>
-                    <p>
+                    <p class="about-approach">
                         My approach combines technical excellence with strategic thinking, ensuring that every project 
                         not only looks great but also delivers measurable results.
                     </p>
                     <div class="skills">
                         <h3>Skills & Expertise</h3>
-                        <div class="skill-tags">
-                            <span class="skill-tag">Web Development</span>
-                            <span class="skill-tag">UI/UX Design</span>
-                            <span class="skill-tag">Project Management</span>
-                            <span class="skill-tag">Digital Strategy</span>
-                            <span class="skill-tag">Consulting</span>
-                        </div>
+                        <ul class="skills-list">
+                            <li>Web Development</li>
+                            <li>UI/UX Design</li>
+                            <li>Project Management</li>
+                            <li>Digital Strategy</li>
+                            <li>Consulting</li>
+                        </ul>
                     </div>
                 </div>
                 <div class="about-stats">
                     <div class="stat-item">
-                        <h3>50+</h3>
+                        <h3 class="stat-number">10+</h3>
                         <p>Projects Completed</p>
                     </div>
                     <div class="stat-item">
-                        <h3>5+</h3>
+                        <h3 class="stat-number">5+</h3>
                         <p>Years Experience</p>
                     </div>
                     <div class="stat-item">
-                        <h3>100%</h3>
+                        <h3 class="stat-number">100%</h3>
                         <p>Client Satisfaction</p>
                     </div>
                 </div>
