Configure PDF-only resume download with proper filename

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                     I design and ship analytics platforms that don't fall over on day two. Cloud-first. Governance-minded. Performance-obsessed. If it moves data, I make it reliable and measurable.
                 </p>
                 <div class="hero-buttons">
-                    <a href="/resume.pdf" class="btn btn-primary">
-                        <i class="fas fa-download"></i> Download resume
+                    <a href="resume/resume.pdf" class="btn btn-primary" download="Pratik_Kumar_Kale_Resume.pdf">
+                        <i class="fas fa-download"></i> Download Resume (PDF)
                     </a>
                     <a href="mailto:kpratik64@gmail.com" class="btn btn-secondary">
                         <i class="fas fa-envelope"></i> Email
