Config-driven content: move hero/profile/about text to config.json; load and apply via script.js; include config-loader.js

--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
         <div class="container">
             <div class="section-header">
                 <h2>About</h2>
-                <p class="section-intro">Big on architecture thinking, small on chaos.</p>
+                <p class="section-intro">AI-led data and analytics strategy, delivered with reliable engineering.</p>
             </div>
             <div class="about-content">
-                <p>I build analytics systems end to end: ingestion, modeling, governance, and the last mile with BI. I enjoy fixing flaky refreshes, making dashboards fast, and documenting just enough so teams stop guessing.</p>
-                <p>Current focus: scalable data contracts on OCI, pragmatic RAG for analytics help, and clean handoffs between engineering and analysts.</p>
+                <p>I design and ship AI‑powered data and analytics solutions end to end: ingestion, modeling, semantic layers, LLM/RAG where it helps, and the last mile with dashboards. I connect business outcomes to platform choices so solutions are measurable, governable, and fast.</p>
+                <p>Focus areas: Strategy — Data & Analytics, RAG patterns and prompt safety, performance tuning and cost governance, metric/semantic layers, and clean handoffs between engineering and analysts across OCI, AWS, and Azure.</p>
             </div>
         </div>
     </section>
@@ -330,6 +330,7 @@
         </div>
     </footer>
 
+    <script src="config-loader.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
