changed short line for PRojects

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         <div class="container">
             <div class="section-header">
                 <h2>Projects</h2>
-                <p class="section-intro">A few that show depth across data, BI, and cloud.</p>
+                <p class="section-intro">A few that show depth across data, Analytics, and cloud.</p>
             </div>
             <div class="projects-filters">
                 <div class="search-box">
