CI/SEO: add HTML/CSS lint workflow, sitemap.xml, robots.txt, and SEO meta tags (OG/Twitter/canonical); update package.json for linters

--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Solutions · Data & Analytics Strategy</title>
-    <meta name="description" content="Lead Analytics Engineer specializing in data platforms, BI strategy, and cloud solutions on OCI and AWS.">
+    <title>AI Solutions · Data & Analytics</title>
+    <meta name="description" content="With teams, I build AI‑enabled decision systems — secure, observable, useful.">
+    <meta name="author" content="Pratik Kumar Kale">
+    <link rel="canonical" href="https://kpratik64.github.io/my-portfolio/">
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="/my-portfolio/sitemap.xml">
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <meta property="og:title" content="AI Solutions Engineer | Strategy - Data & Analytics">
+    <meta property="og:description" content="With teams, I build AI‑enabled decision systems — secure, observable, useful.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://kpratik64.github.io/my-portfolio/">
+    <meta property="og:image" content="https://kpratik64.github.io/my-portfolio/images/profile.jpg">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="AI Solutions Engineer | Strategy - Data & Analytics">
+    <meta name="twitter:description" content="With teams, I build AI‑enabled decision systems — secure, observable, useful.">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
