Chore: update repo/homepage URLs to my-portfolio; fix resume link; tidy docs

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -146,7 +146,7 @@
             Hyderabad, Telangana, India | kpratik64@gmail.com | +91-8919052874<br>
             <a href="https://www.linkedin.com/in/pratik-kumar-kale/" target="_blank">LinkedIn</a> | 
             <a href="https://github.com/kpratik64" target="_blank">GitHub</a> | 
-            <a href="https://kpratik64.github.io/portfolio-website/" target="_blank">Portfolio</a>
+            <a href="https://kpratik64.github.io/my-portfolio/" target="_blank">Portfolio</a>
         </div>
     </div>
 
