Resume: align title and summary with site; update AI wording, governance phrasing, and links

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -141,7 +141,7 @@
 <body>
     <div class="header">
         <div class="name">PRATIK KUMAR KALE</div>
-        <div class="title">LEAD DATA ANALYTICS ENGINEER</div>
+        <div class="title">AI SOLUTIONS ENGINEER | STRATEGY — DATA & ANALYTICS</div>
         <div class="contact-info">
             Hyderabad, Telangana, India | kpratik64@gmail.com | +91-8919052874<br>
             <a href="https://www.linkedin.com/in/pratik-kumar-kale/" target="_blank">LinkedIn</a> | 
@@ -152,14 +152,14 @@
 
     <div class="section">
         <div class="section-title">EXECUTIVE SUMMARY</div>
-        <p>Data analytics leader with 8+ years building data platforms and BI solutions at enterprise scale. Led teams across data engineering, analytics, and BI; owned data strategy and platform architecture. Known for shipping measurable outcomes: cost optimization, performance improvements, and governance standardization.</p>
+        <p>I help teams build AI‑enabled decision systems — reliable platforms, governed data, and fast, useful insights. Outcomes first; lean standards; sleeves‑rolled‑up execution (LLM/RAG prototypes, shaping SQL models, and performance fixes). 8+ years across data engineering, analytics, and BI with measurable wins in cost, reliability, and adoption.</p>
     </div>
 
     <div class="section">
         <div class="section-title">CORE LEADERSHIP AREAS</div>
         <ul class="highlights">
             <li>Data Platform Architecture (Lakehouse, Data Warehouse)</li>
-            <li>Analytics & BI Strategy (Self-Service, Governance)</li>
+            <li>AI & Analytics Strategy (Self-Service, Governance)</li>
             <li>Cloud Platforms (OCI / AWS / Azure)</li>
             <li>Data Governance, Security & Compliance</li>
             <li>Team Leadership & Mentorship</li>
@@ -176,7 +176,7 @@
         <ul class="highlights">
             <li>Migrated data lake from AWS to OCI, cutting cloud costs by 30% and improving pipeline reliability to 99.9% uptime.</li>
             <li>Optimized BI estate reducing dashboard load time from 15s to 3s for 500+ users across multiple business units.</li>
-            <li>Established data contract governance and CI/CD for pipelines, reducing incident rate by 60% within 6 months.</li>
+            <li>Established clear schemas (data contracts), metrics/semantic layer, and CI/CD for pipelines — 60% fewer incidents in 6 months.</li>
             <li>Scaled analytics team from 3 to 8 engineers while improving on-time delivery from 70% to 95%.</li>
         </ul>
     </div>
@@ -211,7 +211,7 @@
         </ul>
 
         <div class="company" style="margin-top: 20px;">CLOVERTEX (ENGAGEMENT) — Hyderabad, India</div>
-        <div class="position">BI & DW Consultant</div>
+        <div class="position">BI & Data Warehouse Consultant</div>
         <div class="duration">2025</div>
         <div class="scope">Team: 2; Domains: data warehouse, BI implementation; Stack: OCI, Tableau, SQL.</div>
         <ul class="achievements">
@@ -227,7 +227,7 @@
             <div class="project-details">Role: Lead Architect | Tech: OCI, AWS, Python | Impact: 30% cost reduction, 99.9% uptime</div>
         </div>
         <div class="project">
-            <div class="project-title">Self-Service BI Implementation</div>
+            <div class="project-title">Self-Service AI & BI Implementation</div>
             <div class="project-details">Role: Strategy Owner | Tech: Power BI, OAS | Impact: 70% faster insights, 85% adoption</div>
         </div>
         <div class="project">
