--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <meta name="author" content="Pratik Kumar Kale">
     <link rel="canonical" href="https://kpratik64.github.io/my-portfolio/">
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/my-portfolio/sitemap.xml">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <meta property="og:title" content="AI Solutions Engineer | Strategy - Data & Analytics">
     <meta property="og:description" content="With teams, I build AI‑enabled decision systems — secure, observable, useful.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://kpratik64.github.io/my-portfolio/">
-    <meta property="og:image" content="https://kpratik64.github.io/my-portfolio/images/profile.jpg">
+    <meta property="og:image" content="https://kpratik64.github.io/my-portfolio/assets/images/profile.jpg">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="AI Solutions Engineer | Strategy - Data & Analytics">
     <meta name="twitter:description" content="With teams, I build AI‑enabled decision systems — secure, observable, useful.">
@@ -101,7 +101,7 @@
                         </p>
                     </div>
                     <div class="profile-avatar">
-                        <img src="images/profile.jpg" alt="Pratik Kumar Kale" class="profile-image">
+                        <img src="assets/images/profile.jpg" alt="Pratik Kumar Kale" class="profile-image">
                     </div>
                 </div>
 
@@ -341,6 +341,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
