content(experience): align website experience with full resume; add prior roles

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <div class="container">
             <div class="section-header">
                 <h2>Experience</h2>
-                <p class="section-intro">Selected roles and engagements.</p>
+                <p class="section-intro">Full professional journey — recent analytics roles and prior leadership.</p>
             </div>
             <div class="timeline">
                 <div class="timeline-item">
@@ -139,14 +139,12 @@
                         <div class="experience-header">
                             <div>
                                 <h3>Lead Data Analytics Engineer</h3>
-                                <p>ITechVersity Solutions Pvt Ltd</p>
+                                <p>INFOLOB</p>
                             </div>
-                            <span class="period">2022 — Present</span>
+                            <span class="period">Oct 2024 — Present</span>
                         </div>
                         <ul class="experience-bullets">
-                            <li>Solution design for data platforms on OCI and AWS</li>
-                            <li>Owner for BI strategy using Power BI and OAS</li>
-                            <li>Mentored engineers; paved roadmap toward architecture</li>
+                            <li>Drive analytics engineering and Power BI initiatives; mentor teams and improve platform reliability.</li>
                         </ul>
                     </div>
                 </div>
@@ -157,14 +155,15 @@
                     <div class="timeline-content">
                         <div class="experience-header">
                             <div>
-                                <h3>Data Engineering Consultant</h3>
-                                <p>INFOLOB (Engagement)</p>
+                                <h3>Sr. Analytics Engineer — BI Developer</h3>
+                                <p>ITVersity, Inc.</p>
                             </div>
-                            <span class="period">2024</span>
+                            <span class="period">Jun 2023 — Oct 2024</span>
                         </div>
                         <ul class="experience-bullets">
-                            <li>Migrated data lake from AWS to OCI; stabilized pipelines</li>
-                            <li>Optimized ADW connectivity and governed cost baselines</li>
+                            <li>Delivered dashboards with Power BI/Tableau/OAC; migrated data lake AWS Cloudera → Oracle ADW with SQL validation.</li>
+                            <li>Configured AD/Row‑Level Security; managed gateways and native connectors; improved refresh and report performance.</li>
+                            <li>Partnered with Data Engineering (Glue, OCI DI, ADF, Airflow); mentored juniors on SQL and BI SDLC.</li>
                         </ul>
                     </div>
                 </div>
@@ -175,14 +174,82 @@
                     <div class="timeline-content">
                         <div class="experience-header">
                             <div>
-                                <h3>BI & DW Consultant</h3>
-                                <p>Clovertex (Engagement)</p>
+                                <h3>Deputy General Manager — Data Analytics Transition</h3>
+                                <p>Elevate X</p>
                             </div>
-                            <span class="period">2025</span>
+                            <span class="period">Dec 2020 — Jun 2023</span>
                         </div>
                         <ul class="experience-bullets">
-                            <li>DW on OCI with Tableau; GxP-minded delivery approach</li>
-                            <li>Set up ingestion standards and data contracts</li>
+                            <li>Led transition from sales to data‑driven operations; built Power BI dashboards aligned to business objectives.</li>
+                            <li>Integrated AD and RLS; trained users on storytelling; optimized performance and governed gateways.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-marker">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <div class="timeline-content">
+                        <div class="experience-header">
+                            <div>
+                                <h3>Assistant Sales Manager</h3>
+                                <p>HomeLane</p>
+                            </div>
+                            <span class="period">Aug 2019 — Dec 2020</span>
+                        </div>
+                        <ul class="experience-bullets">
+                            <li>Built top‑performing unit; sustained ~15% conversion ratio; introduced Excel dashboards for decision support.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-marker">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <div class="timeline-content">
+                        <div class="experience-header">
+                            <div>
+                                <h3>Field Sales Manager</h3>
+                                <p>HomeLane</p>
+                            </div>
+                            <span class="period">Jan 2019 — Aug 2019</span>
+                        </div>
+                        <ul class="experience-bullets">
+                            <li>Generated ₹1 Cr in a month; led a 20‑member team; boosted meeting success 65% → 90%.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-marker">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <div class="timeline-content">
+                        <div class="experience-header">
+                            <div>
+                                <h3>Team Lead</h3>
+                                <p>Amazon</p>
+                            </div>
+                            <span class="period">Jun 2017 — Dec 2018</span>
+                        </div>
+                        <ul class="experience-bullets">
+                            <li>Improved team productivity by ~20% via workflow optimization and coaching; resolved escalations.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-marker">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <div class="timeline-content">
+                        <div class="experience-header">
+                            <div>
+                                <h3>Senior Customer Service Associate</h3>
+                                <p>Amazon</p>
+                            </div>
+                            <span class="period">Jun 2016 — May 2017</span>
+                        </div>
+                        <ul class="experience-bullets">
+                            <li>Maintained ~95% CSAT; implemented CRM improvements reducing response time by ~20%.</li>
                         </ul>
                     </div>
                 </div>
