ui(experience): show in-company promotions for Amazon and HomeLane with role timeline visuals

--- a/index.html
+++ b/index.html
@@ -192,14 +192,30 @@
                     <div class="timeline-content">
                         <div class="experience-header">
                             <div>
-                                <h3>Assistant Sales Manager</h3>
-                                <p>HomeLane</p>
+                                <h3>HomeLane</h3>
+                                <p>Hyderabad, Telangana</p>
                             </div>
                             <span class="period">Aug 2019 — Dec 2020</span>
                         </div>
-                        <ul class="experience-bullets">
-                            <li>Built top‑performing unit; sustained ~15% conversion ratio; introduced Excel dashboards for decision support.</li>
-                        </ul>
+                        <div class="role-timeline">
+                            <div class="role-step">
+                                <span class="role-marker"><i class="fas fa-arrow-up"></i></span>
+                                <div class="role-period">Aug 2019 — Dec 2020</div>
+                                <div class="role-title">Assistant Sales Manager</div>
+                                <ul class="experience-bullets">
+                                    <li>Built top‑performing unit; sustained ~15% conversion ratio; introduced Excel dashboards for decision support.</li>
+                                </ul>
+                            </div>
+                            <div class="role-step">
+                                <span class="role-marker"><i class="fas fa-level-up-alt"></i></span>
+                                <div class="promotion-label"><i class="fas fa-star"></i> Promoted</div>
+                                <div class="role-period">Jan 2019 — Aug 2019</div>
+                                <div class="role-title">Field Sales Manager</div>
+                                <ul class="experience-bullets">
+                                    <li>Generated ₹1 Cr in a month; led a 20‑member team; boosted meeting success 65% → 90%.</li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="timeline-item">
@@ -226,31 +242,30 @@
                     <div class="timeline-content">
                         <div class="experience-header">
                             <div>
-                                <h3>Team Lead</h3>
-                                <p>Amazon</p>
+                                <h3>Amazon</h3>
+                                <p>India</p>
                             </div>
                             <span class="period">Jun 2017 — Dec 2018</span>
                         </div>
-                        <ul class="experience-bullets">
-                            <li>Improved team productivity by ~20% via workflow optimization and coaching; resolved escalations.</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="timeline-item">
-                    <div class="timeline-marker">
-                        <i class="fas fa-briefcase"></i>
-                    </div>
-                    <div class="timeline-content">
-                        <div class="experience-header">
-                            <div>
-                                <h3>Senior Customer Service Associate</h3>
-                                <p>Amazon</p>
+                        <div class="role-timeline">
+                            <div class="role-step">
+                                <span class="role-marker"><i class="fas fa-arrow-up"></i></span>
+                                <div class="role-period">Jun 2017 — Dec 2018</div>
+                                <div class="role-title">Team Lead</div>
+                                <ul class="experience-bullets">
+                                    <li>Improved team productivity by ~20% via workflow optimization and coaching; resolved escalations.</li>
+                                </ul>
                             </div>
-                            <span class="period">Jun 2016 — May 2017</span>
+                            <div class="role-step">
+                                <span class="role-marker"><i class="fas fa-level-up-alt"></i></span>
+                                <div class="promotion-label"><i class="fas fa-star"></i> Promoted</div>
+                                <div class="role-period">Jun 2016 — May 2017</div>
+                                <div class="role-title">Senior Customer Service Associate</div>
+                                <ul class="experience-bullets">
+                                    <li>Maintained ~95% CSAT; implemented CRM improvements reducing response time by ~20%.</li>
+                                </ul>
+                            </div>
                         </div>
-                        <ul class="experience-bullets">
-                            <li>Maintained ~95% CSAT; implemented CRM improvements reducing response time by ~20%.</li>
-                        </ul>
                     </div>
                 </div>
             </div>
