ui(experience): fix extra arrow; show full company timeline; add collapsible 'Previous Roles' sections

--- a/index.html
+++ b/index.html
@@ -195,26 +195,28 @@
                                 <h3>HomeLane</h3>
                                 <p>Hyderabad, Telangana</p>
                             </div>
-                            <span class="period">Aug 2019 — Dec 2020</span>
+                            <span class="period">Jan 2019 — Dec 2020</span>
                         </div>
                         <div class="role-timeline">
                             <div class="role-step">
-                                <span class="role-marker"><i class="fas fa-arrow-up"></i></span>
+                                <span class="role-marker role-marker--plain"></span>
                                 <div class="role-period">Aug 2019 — Dec 2020</div>
                                 <div class="role-title">Assistant Sales Manager</div>
                                 <ul class="experience-bullets">
                                     <li>Built top‑performing unit; sustained ~15% conversion ratio; introduced Excel dashboards for decision support.</li>
                                 </ul>
                             </div>
-                            <div class="role-step">
-                                <span class="role-marker"><i class="fas fa-level-up-alt"></i></span>
-                                <div class="promotion-label"><i class="fas fa-star"></i> Promoted</div>
-                                <div class="role-period">Jan 2019 — Aug 2019</div>
-                                <div class="role-title">Field Sales Manager</div>
-                                <ul class="experience-bullets">
-                                    <li>Generated ₹1 Cr in a month; led a 20‑member team; boosted meeting success 65% → 90%.</li>
-                                </ul>
-                            </div>
+                            <details class="previous-roles">
+                                <summary class="promotion-label"><i class="fas fa-star"></i> Previous Roles</summary>
+                                <div class="role-step" style="margin-top:0.75rem;">
+                                    <span class="role-marker role-marker--plain"></span>
+                                    <div class="role-period">Jan 2019 — Aug 2019</div>
+                                    <div class="role-title">Field Sales Manager</div>
+                                    <ul class="experience-bullets">
+                                        <li>Generated ₹1 Cr in a month; led a 20‑member team; boosted meeting success 65% → 90%.</li>
+                                    </ul>
+                                </div>
+                            </details>
                         </div>
                     </div>
                 </div>
@@ -245,26 +247,28 @@
                                 <h3>Amazon</h3>
                                 <p>India</p>
                             </div>
-                            <span class="period">Jun 2017 — Dec 2018</span>
+                            <span class="period">Jun 2016 — Dec 2018</span>
                         </div>
                         <div class="role-timeline">
                             <div class="role-step">
-                                <span class="role-marker"><i class="fas fa-arrow-up"></i></span>
+                                <span class="role-marker role-marker--plain"></span>
                                 <div class="role-period">Jun 2017 — Dec 2018</div>
                                 <div class="role-title">Team Lead</div>
                                 <ul class="experience-bullets">
                                     <li>Improved team productivity by ~20% via workflow optimization and coaching; resolved escalations.</li>
                                 </ul>
                             </div>
-                            <div class="role-step">
-                                <span class="role-marker"><i class="fas fa-level-up-alt"></i></span>
-                                <div class="promotion-label"><i class="fas fa-star"></i> Promoted</div>
-                                <div class="role-period">Jun 2016 — May 2017</div>
-                                <div class="role-title">Senior Customer Service Associate</div>
-                                <ul class="experience-bullets">
-                                    <li>Maintained ~95% CSAT; implemented CRM improvements reducing response time by ~20%.</li>
-                                </ul>
-                            </div>
+                            <details class="previous-roles">
+                                <summary class="promotion-label"><i class="fas fa-star"></i> Previous Roles</summary>
+                                <div class="role-step" style="margin-top:0.75rem;">
+                                    <span class="role-marker role-marker--plain"></span>
+                                    <div class="role-period">Jun 2016 — May 2017</div>
+                                    <div class="role-title">Senior Customer Service Associate</div>
+                                    <ul class="experience-bullets">
+                                        <li>Maintained ~95% CSAT; implemented CRM improvements reducing response time by ~20%.</li>
+                                    </ul>
+                                </div>
+                            </details>
                         </div>
                     </div>
                 </div>
