--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                                 </ul>
                             </div>
                             <details class="previous-roles">
-                                <summary class="promotion-label"><i class="fas fa-star"></i> Previous Roles</summary>
+                                <summary class="previous-summary"><span class="toggle"></span> Previous Roles</summary>
                                 <div class="role-step" style="margin-top:0.75rem;">
                                     <span class="role-marker role-marker--plain"></span>
                                     <div class="role-period">Jan 2019 — Aug 2019</div>
@@ -220,23 +220,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="timeline-item">
-                    <div class="timeline-marker">
-                        <i class="fas fa-briefcase"></i>
-                    </div>
-                    <div class="timeline-content">
-                        <div class="experience-header">
-                            <div>
-                                <h3>Field Sales Manager</h3>
-                                <p>HomeLane</p>
-                            </div>
-                            <span class="period">Jan 2019 — Aug 2019</span>
-                        </div>
-                        <ul class="experience-bullets">
-                            <li>Generated ₹1 Cr in a month; led a 20‑member team; boosted meeting success 65% → 90%.</li>
-                        </ul>
-                    </div>
-                </div>
+                
                 <div class="timeline-item">
                     <div class="timeline-marker">
                         <i class="fas fa-briefcase"></i>
@@ -259,7 +243,7 @@
                                 </ul>
                             </div>
                             <details class="previous-roles">
-                                <summary class="promotion-label"><i class="fas fa-star"></i> Previous Roles</summary>
+                                <summary class="previous-summary"><span class="toggle"></span> Previous Roles</summary>
                                 <div class="role-step" style="margin-top:0.75rem;">
                                     <span class="role-marker role-marker--plain"></span>
                                     <div class="role-period">Jun 2016 — May 2017</div>
