--- a/index.html
+++ b/index.html
@@ -307,45 +307,47 @@
                     <i class="fas fa-filter"></i>
                     <input type="text" id="projectSearch" placeholder="Search projects...">
                 </div>
-                <label class="filter-label">Filter by Technologies</label>
-                <div class="tech-filter">
-                    <button id="techFilterToggle" class="tech-toggle">
-                        <span id="techFilterLabel">All technologies</span>
-                        <i class="fas fa-chevron-down"></i>
-                    </button>
-                    <div id="techFilterMenu" class="tech-menu" hidden>
-                        <div class="tech-grid">
-                            <button class="tech-item" data-value="">All technologies</button>
-                            <button class="tech-item" data-value="ADW">ADW</button>
-                            <button class="tech-item" data-value="APIs">APIs</button>
-                            <button class="tech-item" data-value="Apps Script">Apps Script</button>
-                            <button class="tech-item" data-value="AWS">AWS</button>
-                            <button class="tech-item" data-value="Django">Django</button>
-                            <button class="tech-item" data-value="dbt">dbt</button>
-                            <button class="tech-item" data-value="ELT">ELT</button>
-                            <button class="tech-item" data-value="ETL">ETL</button>
-                            <button class="tech-item" data-value="Linux">Linux</button>
-                            <button class="tech-item" data-value="LLM">LLM</button>
-                            <button class="tech-item" data-value="OBIEE">OBIEE</button>
-                            <button class="tech-item" data-value="OAS">OAS</button>
-                            <button class="tech-item" data-value="OAuth2">OAuth2</button>
-                            <button class="tech-item" data-value="OCI">OCI</button>
-                            <button class="tech-item" data-value="Odoo">Odoo</button>
-                            <button class="tech-item" data-value="ODI">ODI</button>
-                            <button class="tech-item" data-value="Postgres">Postgres</button>
-                            <button class="tech-item" data-value="Power BI">Power BI</button>
-                            <button class="tech-item" data-value="Python">Python</button>
-                            <button class="tech-item" data-value="RAG">RAG</button>
-                            <button class="tech-item" data-value="React">React</button>
-                            <button class="tech-item" data-value="Redshift">Redshift</button>
-                            <button class="tech-item" data-value="Tableau">Tableau</button>
-                            <button class="tech-item" data-value="Vector DB">Vector DB</button>
+                <div class="filter-row">
+                    <label class="filter-label">Filter by Technologies</label>
+                    <div class="tech-filter">
+                        <button id="techFilterToggle" class="tech-toggle">
+                            <span id="techFilterLabel">All technologies</span>
+                            <i class="fas fa-chevron-down"></i>
+                        </button>
+                        <div id="techFilterMenu" class="tech-menu" hidden>
+                            <div class="tech-grid">
+                                <button class="tech-item" data-value="">All technologies</button>
+                                <button class="tech-item" data-value="ADW">ADW</button>
+                                <button class="tech-item" data-value="APIs">APIs</button>
+                                <button class="tech-item" data-value="Apps Script">Apps Script</button>
+                                <button class="tech-item" data-value="AWS">AWS</button>
+                                <button class="tech-item" data-value="Django">Django</button>
+                                <button class="tech-item" data-value="dbt">dbt</button>
+                                <button class="tech-item" data-value="ELT">ELT</button>
+                                <button class="tech-item" data-value="ETL">ETL</button>
+                                <button class="tech-item" data-value="Linux">Linux</button>
+                                <button class="tech-item" data-value="LLM">LLM</button>
+                                <button class="tech-item" data-value="OBIEE">OBIEE</button>
+                                <button class="tech-item" data-value="OAS">OAS</button>
+                                <button class="tech-item" data-value="OAuth2">OAuth2</button>
+                                <button class="tech-item" data-value="OCI">OCI</button>
+                                <button class="tech-item" data-value="Odoo">Odoo</button>
+                                <button class="tech-item" data-value="ODI">ODI</button>
+                                <button class="tech-item" data-value="Postgres">Postgres</button>
+                                <button class="tech-item" data-value="Power BI">Power BI</button>
+                                <button class="tech-item" data-value="Python">Python</button>
+                                <button class="tech-item" data-value="RAG">RAG</button>
+                                <button class="tech-item" data-value="React">React</button>
+                                <button class="tech-item" data-value="Redshift">Redshift</button>
+                                <button class="tech-item" data-value="Tableau">Tableau</button>
+                                <button class="tech-item" data-value="Vector DB">Vector DB</button>
+                            </div>
                         </div>
                     </div>
+                    <button id="resetFilters" class="btn-reset">
+                        <i class="fas fa-times"></i> Reset
+                    </button>
                 </div>
-                <button id="resetFilters" class="btn-reset">
-                    <i class="fas fa-times"></i> Reset
-                </button>
             </div>
             <div class="projects-grid" id="projectsGrid">
                 <!-- Projects will be loaded dynamically -->
