feat: Implement horizontal section header layout with right-aligned intro text

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <div class="container">
             <div class="section-header">
                 <h2>Experience</h2>
-                <p class="section-intro">Full professional journey — recent analytics roles and prior leadership.</p>
+                <p class="section-intro">Delivery and leadership.</p>
             </div>
             <div class="timeline">
                 <div class="timeline-item">
