--- a/index.html
+++ b/index.html
@@ -91,8 +91,12 @@
     <meta property="og:description" content="With teams, I build AI‑enabled decision systems — secure, observable, useful.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://kpratik64.github.io/my-portfolio/">
-    <meta property="og:image" content="https://kpratik64.github.io/my-portfolio/assets/images/profile.jpg">
+    <meta property="og:image" content="https://kpratik64.github.io/my-portfolio/assets/images/favicon_io/for light mode/android-chrome-512x512.png">
+    <meta property="og:image:width" content="512">
+    <meta property="og:image:height" content="512">
+    <meta property="og:image:alt" content="Pratik Kumar Kale - AI Solutions Engineer">
     <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:image" content="https://kpratik64.github.io/my-portfolio/assets/images/favicon_io/for light mode/android-chrome-512x512.png">
     <meta name="twitter:title" content="AI Solutions Engineer | Strategy - Data & Analytics">
     <meta name="twitter:description" content="With teams, I build AI‑enabled decision systems — secure, observable, useful.">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
