content(projects): hide Redshift ELT project as not started yet

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -662,13 +662,7 @@
                 </div>
                 <div class="project-description">Hands‑on enablement for a large BFSI on dbt best practices: Git workflows, tests, lineage, environments, and CI.</div>
             </div>
-            <div class="project-item">
-                <div class="project-header">
-                    <div class="project-title">Redshift ELT with dbt — Modernization (BFSI)</div>
-                    <a href="https://kpratik64.github.io/my-portfolio/#projects" class="project-link">View Project</a>
-                </div>
-                <div class="project-description">Leaping from S3 → EMR → Redshift ETL to dbt + Redshift ELT: zero EMR overhead, faster delivery, lower costs, governance built‑in, and future‑ready platform.</div>
-            </div>
+            <!-- Hidden project: Redshift ELT with dbt — Modernization (BFSI) - Not started yet -->
         </div>
 
         <div class="section">
