content(projects): update project titles - remove Greenfield, In-house CRM, PoC; change Logistics format

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -622,21 +622,21 @@
             </div>
             <div class="project-item">
                 <div class="project-header">
-                    <div class="project-title">Oracle Analytics Server on OCI (Logistics)</div>
+                    <div class="project-title">Oracle Analytics Server on OCI for Logistics</div>
                     <a href="https://kpratik64.github.io/my-portfolio/#projects" class="project-link">View Project</a>
                 </div>
                 <div class="project-description">Upgrade journey: OBIEE 10g → OAS on OCI with hardened networking, automated deploys, RCU setup, and catalog migration for a PAN‑India logistics firm.</div>
             </div>
             <div class="project-item">
                 <div class="project-header">
-                    <div class="project-title">RAG Chatbot PoC on OCI</div>
+                    <div class="project-title">RAG Chatbot on OCI</div>
                     <a href="https://kpratik64.github.io/my-portfolio/#projects" class="project-link">View Project</a>
                 </div>
                 <div class="project-description">Multi‑lingual retrieval with vector search, prompt safety, and observability hooks; applied only where it adds value.</div>
             </div>
             <div class="project-item">
                 <div class="project-header">
-                    <div class="project-title">Google Workspace Automations (In‑house CRM)</div>
+                    <div class="project-title">Google Workspace Automations</div>
                     <a href="https://kpratik64.github.io/my-portfolio/#projects" class="project-link">View Project</a>
                 </div>
                 <div class="project-description">End‑to‑end lead pipeline: Forms → Sheets segmentation by stage, lead routing, calendar sync, and notifications with Apps Script — lightweight in‑house CRM.</div>
@@ -650,7 +650,7 @@
             </div>
             <div class="project-item">
                 <div class="project-header">
-                    <div class="project-title">OCI Data Lake for Pharma (Greenfield)</div>
+                    <div class="project-title">OCI Data Lake for Pharma</div>
                     <a href="https://kpratik64.github.io/my-portfolio/#projects" class="project-link">View Project</a>
                 </div>
                 <div class="project-description">Data warehouse to monitor drug development lifecycle with FDA compliance. ODI for ETL, Tableau for realtime monitoring, Python automations, Tableau APIs for metadata & logging.</div>
