content(projects): add GCP Data Warehouse for Insurance Analytics project

--- a/index.html
+++ b/index.html
@@ -402,10 +402,13 @@
                                 <button class="tech-item" data-value="APIs">APIs</button>
                                 <button class="tech-item" data-value="Apps Script">Apps Script</button>
                                 <button class="tech-item" data-value="AWS">AWS</button>
+                                <button class="tech-item" data-value="BigQuery">BigQuery</button>
+                                <button class="tech-item" data-value="Cloud Composer">Cloud Composer</button>
                                 <button class="tech-item" data-value="Django">Django</button>
                                 <button class="tech-item" data-value="dbt">dbt</button>
                                 <button class="tech-item" data-value="ELT">ELT</button>
                                 <button class="tech-item" data-value="ETL">ETL</button>
+                                <button class="tech-item" data-value="GCP">GCP</button>
                                 <button class="tech-item" data-value="Linux">Linux</button>
                                 <button class="tech-item" data-value="LLM">LLM</button>
                                 <button class="tech-item" data-value="OBIEE">OBIEE</button>
@@ -419,7 +422,9 @@
                                 <button class="tech-item" data-value="Python">Python</button>
                                 <button class="tech-item" data-value="RAG">RAG</button>
                                 <button class="tech-item" data-value="React">React</button>
+                                <button class="tech-item" data-value="SCD2">SCD2</button>
                                 <button class="tech-item" data-value="Redshift">Redshift</button>
+                                <button class="tech-item" data-value="Superset">Superset</button>
                                 <button class="tech-item" data-value="Tableau">Tableau</button>
                                 <button class="tech-item" data-value="Vector DB">Vector DB</button>
                             </div>
