--- a/resume/resume.html
+++ b/resume/resume.html
@@ -662,6 +662,13 @@
                 </div>
                 <div class="project-description">Hands‑on enablement for a large BFSI on dbt best practices: Git workflows, tests, lineage, environments, and CI.</div>
             </div>
+            <div class="project-item">
+                <div class="project-header">
+                    <div class="project-title">GCP Data Warehouse for Insurance Analytics</div>
+                    <a href="https://kpratik64.github.io/my-portfolio/#projects" class="project-link">View Project</a>
+                </div>
+                <div class="project-description">Led as Solutions Architect: GCS ingestion via GSUTIL, BigQuery external tables, dbt medallion architecture, Superset self-service analytics, Cloud Composer orchestration, SCD2 modeling, and comprehensive testing framework.</div>
+            </div>
             <!-- Hidden project: Redshift ELT with dbt — Modernization (BFSI) - Not started yet -->
         </div>
 
